test_case/rust-lang_rust/52153_403360054.rs
plain
travis_time:start:test_ui
Check compiletest suite=ui mode=ui (x86_64-unknown-linux-gnu -> x86_64-unknown-linux-gnu)
[00:42:52] 
[00:42:52] running 1554 tests
[00:42:58] .............................................................................F.....................i
[00:43:08] ....................................................................................................
[00:43:12] ....................................................................................................
[00:43:16] ....................................................................................................
[00:43:19] ....................................................................................................
---
[00:43:47] ..................................i.................................................................
[00:43:52] .......................i............................................................................
[00:43:58] ....................................................................................................
[00:44:04] ....................................................................................................
l},{"message":"Implemented(Self: Foo) :- FromEnv(Self: Foo).","code":null,"level":"note","spans":[],"children":[],"rendered":null}],"rendered":"error: program clause dump\n  --> /checkout/src/test/ui/chalkify/lower_trait_associate_ty_def.rs:13:1\n   |\nLL | #[rustc_dump_program_clauses] //~ ERROR program clause dump\n   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n   |\n   = note: FromEnv(<Self as Foo>::U: std::marker::Sized) :- FromEnv(Self: Foo).\n   = note: Implemented(Self: Foo) :- FromEnv(Self: Foo).\n\n"}
[00:44:14] {"message":"aborting due to previous error","code":null,"level":"error","spans":[],"children":[],"rendered":"error: aborting due to previous error\n\n"}
[00:44:14] ------------------------------------------
[00:44:14] 
[00:44:14] thread '[ui] ui/chalkify/lower_trait_associate_ty_def.rs' panicked at 'explicit panic', tools/compiletest/src/runtest.rs:3140:9
[00:44:14] note: Run with `RUST_BACKTRACE=1` for a backtrace.
